# mahjong-tehai-recoder

./: .dockerignore  .gitignore  README.md  TODO.md  docker-compose.yml  pyproject.toml
apps/: tehai_recorder.py
apps/kifu_api/: README.md  requirements.txt
apps/kifu_api/app/: main.py
apps/kifu_api/tests/: test_analysis_characterization.py
apps/kifu_ui/: index.html  jest.config.cjs  jest.config.ts  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
apps/kifu_ui/src/: App.tsx  index.css
apps/kifu_ui/src/__tests__/: app.smoke.test.tsx  game_flow.integration.test.ts  log_export.test.ts  right_panel.test.tsx  round.test.ts  seat_action_builder.test.ts  tile_ops.test.ts  win_points.test.ts
apps/kifu_ui/src/components/: CallPickerModal.tsx  LeftTools.tsx  MeldTiles.tsx  PickerModal.tsx  RightPanel.tsx  RuleSettingsModal.tsx  SeatBlock.tsx  SeatSummaryBar.tsx  WinOptionsModal.tsx
apps/kifu_ui/src/hooks/: useScreenCapture.ts  useSeatViewModel.tsx
apps/kifu_ui/src/lib/: game_flow.ts  game_init.ts  log_codec.ts  log_export.ts  mahjong_api.ts  mangan_over_table.json  round.ts  score_log.ts  score_payload.ts  score_utils.ts  seat_action_builder.ts  seat_record.ts  tile_ops.ts  wall_ops.ts  win_points.ts  yaku_map.ts
apps/kifu_ui/src/ui/: types.ts
deploy/: README.md
deploy/docker/: api.Dockerfile  web.Dockerfile
deploy/nginx/: default.conf
mahjong_runtime/: README.md  __init__.py  calcHand.py  machi.py  myyolo.py  toMelds.py  utils.py
scripts/: move_private_assets.sh  rewrite_history_public.sh
