[project]
name = "mj-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.2",
    "mahjong>=1.3.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.1.1",
    "uvicorn[standard]>=0.30.6",
    "ultralytics>=8.3.179",
    "python-multipart>=0.0.22",
]
